<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EchoTwit</string>
    <string name="title_screen_status">Screen status</string>
    <string name="btn_update">Update</string>
    <string name="mode_fullscreen">Screen mode: Full</string>
    <string name="mode_normalscreen">Screen mode: Normal</string>
    <string name="orientation_portrait">Orientation: Portrait</string>
    <string name="orientation_landscape">Orientation: Landscape</string>
    <string name="rotation_0">Rotation: 0°</string>
    <string name="rotation_90">Rotation: 90°</string>
    <string name="rotation_180">Rotation: 180°</string>
    <string name="rotation_270">Rotation: 270°</string>
    <string name="title_setting_fix_orientation">Fix orientation setting</string>
    <string name="radio_none">None</string>
    <string name="radio_portrait">Portrait</string>
    <string name="radio_landscape">Landscape</string>
    <string name="msg_slide_opened">Slide Opened.</string>
    <string name="msg_slide_closed">Slide Closed.</string>
    <string name="msg_configuration_changed">Configuration Changed.</string>
    <string name="twitter_auth_error">Sorry, failed to authenticate</string>
    <string name="btn_pin">PIN</string>
    <string name="twitter_timeline_title">TimeLine</string>
    <string name="timelineTitleProfileLine">Profile</string>
    <string name="no_timeline">There is no timeline</string>
    <string name="auth_wait_message">Now authentication</string>
    <string name="wait_timeline_message">getting timeline</string>
    <string name="choice_list">Choice List</string>
    <string name="wait_get_userlist">getting list</string>
    <string name="title_tweet_normal">New tweet</string>
    <string name="title_tweet_reply">Reply tweet</string>
    <string name="title_tweet_mention">Mention tweet</string>
    <string name="timelineTitleHome">Home</string>
    <string name="timelineTitleMention">Mentions</string>
    <string name="timelineTitleFavorite">Favorites</string>
    <string name="timelineTitleUserList">List</string>
    <string name="msg_tweetError">Sorry, failed to send your tweet</string>
    <string name="msg_gettweetError">Sorry, failed to get timeline. Wait a minute and retry, please</string>
    <string name="msg_getTweetLimit">There is no more tweet</string>
    <string name="customToastRotateToYokoText">Please expand and rotate \n device for Tweet mode</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="setColorTitle">Set timeline color</string>
    <string name="setTimelineTypeTitle">Set timelie type</string>
    <string name="setThisPain">This pain\'s setting</string>
    <string name="alert_dialog_clear_tweet">Delete editing tweet</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="authorizing">Authorizing...</string>    
    <string name="auth_fail">Sorry, failed authorizing</string>        
    <string name="getting">getting tweet... </string>
    <string name="no_more_item">no more item</string>
    <string name="toast_cannot_create_setting">Sorry, please complete opposite pain setting</string>
    <string name="toast_rotate_info_yoko">Please rotate device for timeline mode</string>
    <string name="toast_rotate_info_tate">Please rotate device for tweet mode</string>
</resources>
