<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip"
    android:background="#ffffffff"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/setTimelineTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/white"
        android:id="@+id/setTimelineTypeRadio">
        <RadioButton
            android:text="@string/timelineTitleHome"
            android:textColor="#000000"
            android:id="@+id/setTypeHomeTimeline"/>
        <RadioButton
            android:text="@string/timelineTitleMention"
            android:textColor="#000000"
            android:id="@+id/setTypeMentions" />
        <RadioButton
            android:text="@string/timelineTitleFavorite"
            android:textColor="#000000"
            android:id="@+id/setTypeFavorites" />
    </RadioGroup>
    
</LinearLayout>
